--- a/class project/javascript/project6/css/style.css
+++ b/class project/javascript/project6/css/style.css
@@ -1,7 +1,24 @@
-.player_1{
-    
+.main_container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
-.player_2{
 
+.container{
+    padding: .7em;
 }
+
+.overall_score_container{
+    margin-left: 1.5rem;
+    height: 16rem;
+    width: 15rem;
+    text-align: center;
+}
+
+.overall_score_container_styling{
+    background-color: rgb(60, 151, 132);
+    border-radius: 10px;
+}
+
+
