--- a/class project/javascript/project6/css/util.css
+++ b/class project/javascript/project6/css/util.css
@@ -5,14 +5,41 @@
 *::after,
 *::before{
     box-sizing: border-box;
-        padding: 0;
-        margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
-
+html,
+body{
+    height: 100%;
+}
 
 :root{
-        --ff-primary:'Poppins', sans-serif;
+    --ff-primary:'Poppins', sans-serif;
+    
+    --clr-primary-100: white;
+
+    --clr-accent-500: red;
+    --clr-accent-200: green;
+
+    --fw-s: 300;
+    --fw-n: 400;
+    --fw-m: 600;
+    --fw-b: 800;
+
+    --border-rad1: 10px;
+
+    --border1: 2px solid rgba(0, 0, 0, 0.082);
+
+    --transition-1: 300ms ease-in;
+
+    --shadow-1: 0 2px 8px rgba(255, 255, 255, 0.8);
+    --shadow-2: 0 1px 2px rgba(255, 255, 255, 0.2);
+
+    --linear-gradient-direction: to top right;
+    --primary-background: linear-gradient(var(--linear-gradient-direction), rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.9));
+
+    --popup-outline: 5px solid yellow;
 }
 
 
@@ -21,4 +48,27 @@ body{
     background-size: 100rem;
     color: rgb(255, 255, 255);
     font-family: var(--ff-primary);
+}
+
+.flex_center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    border: none;
+    color: inherit;   
+    line-height: 1;
+    padding: 1em 2em;
+    cursor: pointer;
+    transition: all 0.3s; 
+    font-weight: var(--fw-m); 
+    background-color: rgb(240, 248, 255);
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+}
+
+.btn:focus {
+    outline: none;
 }
