--- a/class project/javascript/project6/css/style.css
+++ b/class project/javascript/project6/css/style.css
@@ -62,3 +62,47 @@
     top: 38.5%;
     padding: 2em 0 2em 2em;
 }
+
+.restart_btn{
+    margin-right: auto;
+    background-color: white;
+    color: black;
+    border-radius: 15px;
+    transition: transform 200ms ease-in-out;
+}
+
+.ruler_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+}
+
+.pop{
+    height: 100px;
+    width: 100px;
+}
+
+.pop_styling{
+    border-radius: 50%;
+    border: 5px solid green;
+    font-weight: var(--fw-b);
+}
+
+.shooter_container{
+    width: 4rem;
+    height: 8rem;
+    position: relative;
+    align-items: flex-end;
+}
+
+.shooter_container_styling {
+    margin-left: 50px;
+    background-color: aliceblue;
+    cursor: pointer;
+    transition: transform var(--transition-1);
+}
+
+.laser{
+
+}
