--- a/class project/javascript/project6/css/util.css
+++ b/class project/javascript/project6/css/util.css
@@ -1,22 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap');
 
-
 *,
-*::after,
-*::before{
+*::before,
+*::after {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 html,
-body{
+body {
     height: 100%;
 }
 
-:root{
-    --ff-primary:'Poppins', sans-serif;
+:root {
+    /*
+    ff-primary, ff-serif, fw-n, fw-m, fw-b, fs-1, fs-2, fs-h1(h1 tag), fs-p(p tag).
+    */
+    --ff-primary: 'Poppins', sans-serif;
+
     --clr-primary-100: white;
+
     --clr-accent-500: red;
     --clr-accent-200: green;
 
@@ -38,17 +42,34 @@ body{
     --primary-background: linear-gradient(var(--linear-gradient-direction), rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.9));
 
     --popup-outline: 5px solid yellow;
+    /* --popup-translateY: 100px; */
 }
 
-
-body{
-    background-image: url(../img/5-dots.png);
+body {
+    /* background-image: var(--primary-background); */
+    background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/5-dots.png);
     background-size: 100rem;
-    color: rgb(255, 255, 255);
+    color: white;
     font-family: var(--ff-primary);
 }
 
-.flex_center{
+/* Make images easier to work with (Andy bell reset) */
+/* img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+} */
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.flex_center {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,15 +77,18 @@ body{
 
 .btn {
     border: none;
-    color: inherit;   
+    color: inherit;
+    
     line-height: 1;
     padding: 1em 2em;
+    background: none;
     cursor: pointer;
-    transition: all 0.3s; 
-    font-weight: var(--fw-m); 
-    border-radius: 10px;
+    /* For background-color to change swiftly when focused: */
+    transition: all 0.3s;
+    font-weight: var(--fw-m);
 }
 
 .btn:focus {
     outline: none;
+    /* background-color: rgba(255, 255, 255, 0.8); */
 }
