--- a/class project/javascript/project7/css/util.css
+++ b/class project/javascript/project7/css/util.css
@@ -1,5 +1,20 @@
 *,*::before,*::after{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
+
+.body{
+    background-image: url(../img/background-img.jpg);
+}
+
+.main_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
