--- a/class project/javascript/project7/css/util.css
+++ b/class project/javascript/project7/css/util.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-.body{
+body{
+    background-color: aquamarine;
     background-image: url(../img/background-img.jpg);
 }
 
